# Tritium

./: CMakeLists.txt  README.md  index.html  params.json
Analysis/: PlotOutputs.C  PrintTree.C
Applications/: CMakeLists.txt  ComputeTritium.cxx  TritiumUnitTest.cxx  tritium_graphics_test.cxx
Common/inc/: TriConstants.h  TriHist.h  TriMath.h  TriObject.h  TriPhaseSpace.h  TriUnits.h  TriUtilities.h  TriVector.h
Common/src/: TriMath.cxx  TriObject.cxx  TriUtilities.cxx
Config/: FermiFunctionTest.xml  IntegrationTest.xml  PlotMaker.xml  atomicTail.xml  calc_fermi_neutrino_mass.xml  calc_full.xml  finalStatesTest.xml  neutrinoConfig.xml  neutrinoModelTests.xml  plot_documentation.xml  simpleNeutrinoModel.xml  test_final_states.xml  test_reader.xml  trialConfig.xml  withDiscreteExcitations.xml  wkbTest.xml
Design/inc/: TriAssert  TriAssert.h  TriConstructable.h  TriDimensions.h  TriElementPrototype.h  TriNode.h  TriNullTypes.h  TriProcessEvent.h  TriQuantity.h  TriSequence.h  TriTypeList.h  TriTypeManipulations.h
Documentation/: CMakeLists.txt
Documentation/Reference/: tritium.doxygen.in
Elements/inc/: TriBetaKinematics.h  TriDifferentiator.h  TriDiscreteExcitation.h  TriElementPrototype.h  TriFermiFunction.h  TriGaussianFunction.h  TriIntegrator.h  TriNeutrinoModel.h  TriNormalization.h  TriPhaseSpaceGenerator.h  TriRelativisticFermiFunction.h  TriSaenzJonsellTail.h  TriSimpleNeutrinoMass.h  TriWKBApproximation.h
Elements/src/: TriBetaKinematics.cxx  TriDifferentiator.cxx  TriDiscreteExcitation.cxx  TriFermiFunction.cxx  TriGaussianFunction.cxx  TriIntegrator.cxx  TriNeutrinoModel.cxx  TriNormalization.cxx  TriRelativisticFermiFunction.cxx  TriSaenzJonsellTail.cxx  TriSimpleNeutrinoMass.cxx  TriWKBApproximation.cxx
Graphics/: CMakeLists.txt  OpenGLManager.h  Window.h
IO/inc/: TriConfigReader.h  TriLogger.h  TriObjectFactory.h  TriRootOutput.h
IO/src/: TriLogger.cxx  TriRootOutput.cxx
Node/inc/: TriNode.h
Nodes/inc/: TriNodeElement.h
Simulation/inc/: TritiumMCEngine.h
Simulation/src/: TritiumMCEngine.cxx
Threads/inc/: TriSingleton.h  TriSmallObjectAllocation.h  TriThreads.h
Threads/src/: TriSingleton.cxx
